crates/pub-api/tests/snapshots/aliases.snap
---
source: crates/pub-api/src/api.rs
expression: apis
---
structs:
  - name: S
    file: crates/pub-api/tests/projects/aliases/src/first/a.rs
    functions:
      - first_a_s_function
      - new_first_a_s_function
    traits:
      - name: Any
        functions:
          - type_id
      - name: Borrow
        functions:
          - borrow
      - name: BorrowMut
        functions:
          - borrow_mut
      - name: Freeze
      - name: From
        functions:
          - from
      - name: Into
        functions:
          - into
      - name: RefUnwindSafe
      - name: Send
      - name: Sync
      - name: TryFrom
        functions:
          - try_from
      - name: TryInto
        functions:
          - try_into
      - name: Unpin
      - name: UnwindSafe
  - name: S
    file: crates/pub-api/tests/projects/aliases/src/first/b.rs
    functions:
      - first_b_s_function
      - new_first_b_s_function
    traits:
      - name: Any
        functions:
          - type_id
      - name: Borrow
        functions:
          - borrow
      - name: BorrowMut
        functions:
          - borrow_mut
      - name: Freeze
      - name: From
        functions:
          - from
      - name: Into
        functions:
          - into
      - name: RefUnwindSafe
      - name: Send
      - name: Sync
      - name: TryFrom
        functions:
          - try_from
      - name: TryInto
        functions:
          - try_into
      - name: Unpin
      - name: UnwindSafe
  - name: S
    file: crates/pub-api/tests/projects/aliases/src/second/a.rs
    functions:
      - new_second_a_s_function
      - second_a_s_function
    traits:
      - name: Any
        functions:
          - type_id
      - name: Borrow
        functions:
          - borrow
      - name: BorrowMut
        functions:
          - borrow_mut
      - name: Freeze
      - name: From
        functions:
          - from
      - name: Into
        functions:
          - into
      - name: RefUnwindSafe
      - name: Send
      - name: Sync
      - name: TryFrom
        functions:
          - try_from
      - name: TryInto
        functions:
          - try_into
      - name: Unpin
      - name: UnwindSafe
  - name: S
    file: crates/pub-api/tests/projects/aliases/src/second/b.rs
    functions:
      - new_second_b_s_function
      - second_b_s_function
    traits:
      - name: Any
        functions:
          - type_id
      - name: Borrow
        functions:
          - borrow
      - name: BorrowMut
        functions:
          - borrow_mut
      - name: Freeze
      - name: From
        functions:
          - from
      - name: Into
        functions:
          - into
      - name: RefUnwindSafe
      - name: Send
      - name: Sync
      - name: TryFrom
        functions:
          - try_from
      - name: TryInto
        functions:
          - try_into
      - name: Unpin
      - name: UnwindSafe
enums: []
traits: []
functions: []
macros: []
