crates/pub-api/tests/snapshots/derive_traits.snap
---
source: crates/pub-api/src/api.rs
expression: apis
---
structs:
  - name: PubStruct1
    file: crates/pub-api/tests/projects/derive_traits/src/lib.rs
    traits:
      - name: Any
        functions:
          - type_id
      - name: Borrow
        functions:
          - borrow
      - name: BorrowMut
        functions:
          - borrow_mut
      - name: Debug
        functions:
          - fmt
      - name: Eq
        functions:
          - assert_receiver_is_total_eq
      - name: Freeze
      - name: From
        functions:
          - from
      - name: Hash
        functions:
          - hash
          - hash_slice
      - name: Into
        functions:
          - into
      - name: Ord
        functions:
          - clamp
          - cmp
          - max
          - min
      - name: PartialEq
        functions:
          - eq
          - ne
      - name: PartialOrd
        functions:
          - ge
          - gt
          - le
          - lt
          - partial_cmp
      - name: RefUnwindSafe
      - name: Send
      - name: StructuralPartialEq
      - name: Sync
      - name: TryFrom
        functions:
          - try_from
      - name: TryInto
        functions:
          - try_into
      - name: Unpin
      - name: UnwindSafe
enums: []
traits: []
functions: []
macros: []
