crates/pub-api/tests/snapshots/enums.snap
---
source: crates/pub-api/src/api.rs
expression: apis
---
structs: []
enums:
  - name: PubEnum1
    file: crates/pub-api/tests/projects/enums/src/lib.rs
    functions:
      - pub_enum1_function
    traits:
      - name: Any
        functions:
          - type_id
      - name: Borrow
        functions:
          - borrow
      - name: BorrowMut
        functions:
          - borrow_mut
      - name: Freeze
      - name: From
        functions:
          - from
      - name: Into
        functions:
          - into
      - name: RefUnwindSafe
      - name: Send
      - name: Sync
      - name: TryFrom
        functions:
          - try_from
      - name: TryInto
        functions:
          - try_into
      - name: Unpin
      - name: UnwindSafe
  - name: PubEnum2
    file: crates/pub-api/tests/projects/enums/src/lib.rs
    functions:
      - pub_enum2_function
    traits:
      - name: Any
        functions:
          - type_id
      - name: Borrow
        functions:
          - borrow
      - name: BorrowMut
        functions:
          - borrow_mut
      - name: Freeze
      - name: From
        functions:
          - from
      - name: Into
        functions:
          - into
      - name: RefUnwindSafe
      - name: Send
      - name: Sync
      - name: TryFrom
        functions:
          - try_from
      - name: TryInto
        functions:
          - try_into
      - name: Unpin
      - name: UnwindSafe
traits: []
functions: []
macros: []
