crates/pub-api/tests/snapshots/functions.snap
---
source: crates/pub-api/src/api.rs
expression: apis
---
structs: []
enums: []
traits: []
functions:
  - name: pub_function1
    file: crates/pub-api/tests/projects/functions/src/lib.rs
  - name: pub_function2
    file: crates/pub-api/tests/projects/functions/src/lib.rs
macros: []
